Fix textbox style bug realted to whitespace

--- a/src/modules/controls.scss
+++ b/src/modules/controls.scss
@@ -468,7 +468,16 @@
     $config: get('controls:textbox', (), false);
 
     // merge all the css
-    $css: flat-merge(control-reset(), $textbox, $config, $overrides);
+    $css: flat-merge(
+        control-reset(
+            (
+                white-space: null,
+            )
+        ),
+        $textbox,
+        $config,
+        $overrides
+    );
 
     // output the css
     @include css-map($css);
